--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -250,7 +250,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
                 @Model.lblAddItem
             </a>
-            <a href="ManageItemGroups" class="btn btn-sm justify-content-center mx-2 top-big-btn btn-outline-gray-600 d-inline-flex align-items-center">
+           @*<a href="ManageItemGroups" class="btn btn-sm justify-content-center mx-2 top-big-btn btn-outline-gray-600 d-inline-flex align-items-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
                 @Model.lblManageItemGroup
             </a>
@@ -258,7 +258,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2 " src="images/manage-b.png">
                 @Model.lblManageUnit
-            </a>
+            </a> *@
 
         </div>
     </div>
