--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -145,15 +145,15 @@
              <div class="btn-group ms-2 ms-lg-3">
             <a href="ManageItems" class="btn btn-sm top-btn btn-outline-gray-600 d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
-             Item
+             Manage Items
             </a>
             </div>
             
-            <div class="btn-group ms-2 ms-lg-3">
+            @*<div class="btn-group ms-2 ms-lg-3">
                 <a href="ManageDestinations" class="btn btn-sm btn-outline-gray-600 justify-content-center top-big-btn d-inline-flex align-items-center">
                     <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">   @Model.lblManageDestination
                 </a>
-            </div>
+            </div>*@
             <div class="btn-group ms-2 ms-lg-3">
                 <a href="ManageRooms" class="btn btn-sm justify-content-center top-btn btn-outline-gray-600 d-inline-flex align-items-center">
                     <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
