--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -252,10 +252,12 @@
                 <table class="table table-centered table-nowrap mb-0 rounded">
                     <thead class="thead-light">
                         <tr>
-                            <th scope="col"class="border-0 rounded-start">@Model.lblSupplierName</th>
+                            <th scope="col"class="border-0 rounded-start">@Model.lblCompanyName</th>
                             <th scope="col"class="border-0 rounded-start">@Model.lblCoordinatorName</th>
                             <th scope="col"class="border-0 rounded-start">@Model.lblConatctNumber</th>
                             <th scope="col"class="border-0 rounded-start">@Model.lblSupplierType</th>
+                            <th scope="col"class="border-0 rounded-start">@Model.lblExtensionNumber</th>
+
                 <th scope="col" class="border-0 rounded-end"></th>
                            
                         </tr>
@@ -270,13 +272,18 @@
                         <td>@item.CoordinatorName</td>
                         <td>@item.ConatctNumber</td>
                         <td>@item.SupplierType</td>
+                        <td>@item.ExtensionNumber</td>
                         <td>
                             <form method="post">
                                 <input type="hidden" value="@Model.CurrentPage" name="page" />
                                 <input type="hidden" value="@item.SupplierId" name="SupplierId" />
                                 <input type="hidden" value="@Model.SupplierName" name="SupplierName" />
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
-                                <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
+
+                                @if(Model.CanDeleteSupplier){
+                                    <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
+                                }
+                                
                             </form>
                         </td>
                     </tr>
@@ -371,8 +378,10 @@
             <thead class="thead-light">
                 <tr>
                     <th>@Model.lblSupplierName</th>
+                    <th>@Model.lblCoordinatorName</th>
                     <th>@Model.lblConatctNumber</th>
                     <th>@Model.lblSupplierType</th>
+                    <th>@Model.lblExtensionNumber</th>
                 </tr>  
             </thead>
             <tbody>
@@ -382,9 +391,12 @@
                     foreach (var item in Model.SuppliersAll)
                     {
                         <tr>
-                             <td>@item.SupplierName</td>
+                            <td>@item.SupplierName</td>
+                            <td>@item.CoordinatorName</td>
                             <td>@item.ConatctNumber</td>
                             <td>@item.SupplierType</td>
+                            <td>@item.ExtensionNumber</td>
+
                         </tr>
                     }
                 }
