--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -246,7 +246,17 @@ document.addEventListener("DOMContentLoaded", function () {
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
         <div class="btn-toolbar mb-2 mb-md-0">
-            <a href="AddItem" class="btn btn-sm justify-content-center top-sm-btn btn-gray-800 mx-2 d-inline-flex align-items-center">
+         @if (Model.CanGenerateReceivingRequest)
+        {
+            <div class="btn-toolbar mb-2 mb-md-0">
+                <a href="ReceivingReports" class="btn btn-sm justify-content-center btn-gray-800 mx-2 d-inline-flex align-items-center">
+                    <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
+                    @Model.lblNewReceivingReport
+                </a>
+            </div>
+
+        }
+           @* <a href="AddItem" class="btn btn-sm justify-content-center top-sm-btn btn-gray-800 mx-2 d-inline-flex align-items-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
                 @Model.lblAddItem
             </a>
