--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -256,7 +256,7 @@ document.addEventListener("DOMContentLoaded", function () {
             </div>
 
         }
-           @* <a href="AddItem" class="btn btn-sm justify-content-center top-sm-btn btn-gray-800 mx-2 d-inline-flex align-items-center">
+            <a href="AddItem" class="btn btn-sm justify-content-center top-sm-btn btn-gray-800 mx-2 d-inline-flex align-items-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
                 @Model.lblAddItem
             </a>
