--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -136,12 +136,13 @@
                 </a>
             </div>
         }
-            <div class="btn-group ms-2 ms-lg-3">
+        //removing manage storage
+            @* <div class="btn-group ms-2 ms-lg-3">
             <a href="ManageStorage" class="btn btn-sm top-btn btn-outline-gray-600 d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
                 @Model.lblManageStorage
             </a>
-            </div>
+            </div> *@
              <div class="btn-group ms-2 ms-lg-3">
             <a href="ManageItems" class="btn btn-sm top-btn btn-outline-gray-600 d-inline-flex align-items-center justify-content-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
