--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,12 +5,21 @@
 }
 <html>
 <head>
-    <title>General Administration of Educational Services Warehouse Management System / @ViewData["Title"] @Model.lblLabMaterials</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] @Model.lblLabMaterials</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/sweetalert2/sweetalert2.min.css" />
     <link rel="stylesheet" href="~/lib/notyf/notyf.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LabMaterials.styles.css" asp-append-version="true" />
+    <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="~/images/Picture1.png" type="image/x-icon" />
+
+
+
+
+
 </head>
 <body dir="@Model.dir">
     <main>
